# Object-Recognition-Using-Open-CV-in-CPP

./: CMakeLists.txt  LICENSE
include/histogram_learning/TugasA/: main.h
include/histogram_learning/TugasB/: knn.h  main.h  recognition.h
result/tugasB/: db_obj_hsv.txt  db_obj_rgb.txt  detection_result_hsv.txt  detection_result_rgb.txt
result/tugasB/1/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/10/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/2/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/3/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/4/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/5/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/6/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/7/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/8/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasB/9/: db_obj_hsv.txt  db_obj_rgb.txt
result/tugasD/: db_hsv.txt  db_rgb.txt  detection_result_hsv.txt  detection_result_rgb.txt
src/TugasA/: main.cpp
src/TugasB/: knn.cpp  main.cpp  recognition.cpp
src/TugasC/: main.cpp
src/TugasD/: knn.cpp  main.cpp
